# cmake

./: CMakeLists.txt
examples/: ExecuteProjection.cpp  exec_module1.cpp  exec_module1_module2.cpp  plotTrajectory.cpp  plotTranjectory.cpp
modules/: CMakeLists.txt
modules/module1/: CMakeLists.txt
modules/module1/include/module1/: ClassMat.hpp
modules/module1/src/: ClassMat.cpp
modules/module2/: CMakeLists.txt
modules/module2/include/module2/: ClassEigenMat.hpp
modules/module2/src/: ClassEigenMat.cpp
modules/module3/: CMakeLists.txt
modules/module3/include/module3/: Trajectory.hpp
modules/module3/src/: Trajectory.cpp
modules/module4/: CMakeLists.txt
modules/module4/include/module4/: Projection.hpp
modules/module4/src/: Projection.cpp
